--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "django (>=5.2.5,<6.0.0)",
     "pillow (>=11.3.0,<12.0.0)",
-    "djangorestframework (>=3.16.1,<4.0.0)"
+    "djangorestframework (>=3.16.1,<4.0.0)",
+    "django-cors-headers (>=4.7.0,<5.0.0)"
 ]
 
 
